Class to process data

--- a/Processing - STFT Creation.ipynb
+++ b/Processing - STFT Creation.ipynb
@@ -11,20 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "id": "49af13b8-49e5-4d87-99d9-31f5d4d1457c",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-27 12:37:53.917605: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -34,7 +26,9 @@
     "from scipy.signal import stft, istft\n",
     "\n",
     "import tensorflow as tf\n",
-    "from ipywidgets import interact"
+    "from ipywidgets import interact\n",
+    "\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -48,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "id": "674b7ed7-dc09-4409-92ab-9f443854f2ac",
    "metadata": {
     "tags": []
@@ -60,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "id": "5c3047f6-ee19-4b73-a75a-1c8ad1457d64",
    "metadata": {
     "tags": []
@@ -72,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "80e2031c-fa97-4b64-a224-bc3e5af045ca",
    "metadata": {
     "tags": []
@@ -80,6 +74,74 @@
    "outputs": [],
    "source": [
     "test_signal = waveforms[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "562c6a0d-7d62-4ea2-b883-9f750254d16d",
+   "metadata": {},
+   "source": [
+    "### Already processed training data\n",
+    "This training data already contains (noisy) input and (denoised) target set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c7976521-ff10-4860-a02f-27f9b90087da",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# following the tensorflow load_data tutorial\n",
+    "\n",
+    "# train_dataset = tf.data.Dataset.from_tensor_slices((train_examples, train_labels))\n",
+    "# test_dataset = tf.data.Dataset.from_tensor_slices((test_examples, test_labels))\n",
+    "\n",
+    "# doesn't really work because it is not in numpy format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "3d9c5bec-3b63-48ff-a39a-03dbaa0ed36f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "folder = \"/home/alex/Desktop/Promotion/Code/Jupyter-Lab Notebooks/Waveform Denoiser/denoise_training_real/third dataset/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "920db207-1def-4e40-9f7b-7f13521e81fd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pure_test = np.load (folder + 'pure_test_set.npy')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "fe65786d-8e79-4e75-8f85-77b9b8c6d7a6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "loading = False\n",
+    "\n",
+    "if loading:\n",
+    "    pure_training = np.load(folder + \"pure_training_set.npy\")\n",
+    "    pure_test = np.load (folder + 'pure_test_set.npy')\n",
+    "    noisy_training = np.load(folder + 'noisy_training_set.npy')\n",
+    "    noisy_test = np.load(folder + 'noisy_test_set.npy')\n"
    ]
   },
   {
@@ -95,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "78539321-f206-42f4-8fed-4e7f56b36b5c",
    "metadata": {
     "tags": []
@@ -107,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "b6a30d70-eb10-432c-8664-49e7e3eeb65f",
    "metadata": {
     "tags": []
@@ -118,108 +180,6 @@
     "for waveform in waveforms:\n",
     "    f,t, result_stft = stft(waveform, fs =1/5.)\n",
     "    stfts.append(result_stft)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "5126b7c9-9ee2-46ab-8491-e59a4ea5c0a5",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(129, 9)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stfts[1].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "fb93706f-e249-4ebc-9f4d-7908147c70db",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "133"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(stfts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "68d240a0-9235-4ba4-9303-97000fd9963e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "empty_data = np.zeros((len(stfts), stfts[1].shape[0], stfts[1].shape[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "c5c27af9-fe07-4fd4-a875-b508b1875182",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(133, 129, 9)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "empty_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "1cfbc00f-8cdc-46db-875a-c2a143a0124c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_12755/3145602325.py:1: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  empty_data[0] = stfts[1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "empty_data[0] = stfts[1]"
    ]
   },
   {
@@ -248,91 +208,151 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "c7976521-ff10-4860-a02f-27f9b90087da",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# following the tensorflow load_data tutorial\n",
-    "\n",
-    "# train_dataset = tf.data.Dataset.from_tensor_slices((train_examples, train_labels))\n",
-    "# test_dataset = tf.data.Dataset.from_tensor_slices((test_examples, test_labels))\n",
-    "\n",
-    "# doesn't really work because it is not in numpy format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "3d9c5bec-3b63-48ff-a39a-03dbaa0ed36f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "folder = \"/home/alex/Desktop/Promotion/Code/Jupyter-Lab Notebooks/Waveform Denoiser/denoise_training_real/third dataset/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "204b55ce-c803-4933-a1b7-583c46e465ca",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['pure_training_set.npy',\n",
-       " 'pure_test_set.npy',\n",
-       " 'noisy_training_set.npy',\n",
-       " 'noisy_test_set.npy',\n",
-       " 'notes']"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir(folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "fe65786d-8e79-4e75-8f85-77b9b8c6d7a6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "loading = False\n",
-    "\n",
-    "if loading:\n",
-    "    pure_training = np.load(folder + \"pure_training_set.npy\")\n",
-    "    pure_test = np.load (folder + 'pure_test_set.npy')\n",
-    "    noisy_training = np.load(folder + 'noisy_training_set.npy')\n",
-    "    noisy_test = np.load(folder + 'noisy_test_set.npy')\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f2ba0c8d-d23a-4782-83a8-1adc8b7430aa",
    "metadata": {},
    "source": [
-    "# need to understand what dataset does.."
+    "# need to understand what dataset batching does..\n",
+    "Batching is a necessary step in the numpy load tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56b09f32-d02c-4e0b-b798-595adc84338b",
+   "metadata": {},
+   "source": [
+    "## Processing: complex phase and amplitude split\n",
+    "The result of a STFT are complex data. They need to be split into separate amplitude and phase arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "d3bc992e-5672-4527-95ee-09e80c825737",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class StftDataset(object):\n",
+    "    def __init__(self, data=None, fs = 1./5.):\n",
+    "        \"\"\" initialize\n",
+    "        \"\"\"\n",
+    "        self.data = None\n",
+    "        if data is not None:\n",
+    "            self.process_data(data, fs=fs)\n",
+    "            \n",
+    "    def process_data(self, data, fs=1./5.):\n",
+    "        \n",
+    "        # process the data\n",
+    "        stfts = []\n",
+    "        for waveform in tqdm(data):\n",
+    "            f,t, result_stft = stft(waveform, fs = fs)\n",
+    "            stfts.append(result_stft)\n",
+    "            \n",
+    "        # store the axis parameters of the STFT (times and frequencies)\n",
+    "        self.f = f\n",
+    "        self.t = t\n",
+    "\n",
+    "        # store the parameters of the \n",
+    "        n = len(stfts)\n",
+    "        number_frequencies = stfts[0].shape[0]\n",
+    "        number_timeslices = stfts[0].shape[1]\n",
+    "\n",
+    "        empty_data = np.zeros((n, number_frequencies, number_timeslices, 2))\n",
+    "\n",
+    "        for count, current_stft in enumerate(stfts):\n",
+    "            amp = np.absolute(current_stft)\n",
+    "            phase = np.angle(current_stft)\n",
+    "            empty_data[count, :,:, 0] = amp\n",
+    "            empty_data[count, :,:, 1] = phase\n",
+    "\n",
+    "        self.data = empty_data\n",
+    "\n",
+    "    def save(self, folder, name):\n",
+    "        \"\"\" This methods saves the data under the name\n",
+    "        in the given folder\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # check if data is actually available\n",
+    "        if self.data is None:\n",
+    "            print(\"No data stored yet.\")\n",
+    "            return\n",
+    "        \n",
+    "        # create correct paths relative to the OS\n",
+    "        t_path = os.path.join(folder, name + \"_t\")\n",
+    "        f_path = os.path.join(folder, name + \"_f\")\n",
+    "        name_path = os.path.join(folder, name)\n",
+    "        \n",
+    "        # make a new folder if it already exists\n",
+    "        try: \n",
+    "            os.mkdir(folder)\n",
+    "            print(\"Creating new folder...\")\n",
+    "        except FileExistsError:\n",
+    "            print(\"Writing into existing folder...\")\n",
+    "        \n",
+    "        # store the data\n",
+    "        np.save(t_path, self.t)\n",
+    "        np.save(f_path, self.f)\n",
+    "        np.save(name_path, self.data)\n",
+    "        \n",
+    "    def load(self, folder, name):\n",
+    "        \"\"\" This method loads the stored data (name) in \n",
+    "        the given folder\n",
+    "        \"\"\"\n",
+    "        # check if folder exists\n",
+    "        try:\n",
+    "            os.listdir(folder)\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Folder does not exist: {folder}\")\n",
+    "            return\n",
+    "\n",
+    "        # create correct paths relative to the OS\n",
+    "        t_path = os.path.join(folder, name + \"_t.npy\")\n",
+    "        f_path = os.path.join(folder, name + \"_f.npy\")\n",
+    "        name_path = os.path.join(folder, name +\".npy\")\n",
+    "        \n",
+    "        try:\n",
+    "            # load the data\n",
+    "            t = np.load(t_path)\n",
+    "            f = np.load(f_path)\n",
+    "            stfs = np.load(name_path)\n",
+    "            print(\"Files loaded.\")\n",
+    "        except FileNotFoundError:\n",
+    "            print(\"Error: Files do not exist.\")\n",
+    "            return\n",
+    "        \n",
+    "        self.t = t\n",
+    "        self.f = f\n",
+    "        self.data = stfs\n",
+    "            \n",
+    "\n",
+    "    def get_data(self):\n",
+    "        return self.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "e7c00c44-2f99-4256-8953-2f9f73f42531",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class DataSetBuilder(object):\n",
+    "    \"\"\" This class takes the base (the noisy examples) and\n",
+    "    the target (the denoised set) data in the time domain\n",
+    "    and converts it into a tensorflow dataset\n",
+    "    \"\"\"\n",
+    "    def __init__(self, base, target):\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1509df05-7bce-4443-95ce-fe5bbc2c10fd",
+   "id": "714870c8-d743-40b6-be65-dec5427b3d05",
    "metadata": {},
    "outputs": [],
    "source": []
