reading small datasets

--- a/Processing - STFT Creation.ipynb
+++ b/Processing - STFT Creation.ipynb
@@ -11,12 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "id": "49af13b8-49e5-4d87-99d9-31f5d4d1457c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-27 19:26:57.061335: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "674b7ed7-dc09-4409-92ab-9f443854f2ac",
    "metadata": {
     "tags": []
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "5c3047f6-ee19-4b73-a75a-1c8ad1457d64",
    "metadata": {
     "tags": []
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "80e2031c-fa97-4b64-a224-bc3e5af045ca",
    "metadata": {
     "tags": []
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "c7976521-ff10-4860-a02f-27f9b90087da",
    "metadata": {
     "tags": []
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 6,
    "id": "3d9c5bec-3b63-48ff-a39a-03dbaa0ed36f",
    "metadata": {
     "tags": []
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 7,
    "id": "920db207-1def-4e40-9f7b-7f13521e81fd",
    "metadata": {
     "tags": []
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "id": "fe65786d-8e79-4e75-8f85-77b9b8c6d7a6",
    "metadata": {
     "tags": []
@@ -157,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "78539321-f206-42f4-8fed-4e7f56b36b5c",
    "metadata": {
     "tags": []
@@ -169,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "b6a30d70-eb10-432c-8664-49e7e3eeb65f",
    "metadata": {
     "tags": []
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 11,
    "id": "d3bc992e-5672-4527-95ee-09e80c825737",
    "metadata": {
     "tags": []
@@ -333,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 12,
    "id": "e7c00c44-2f99-4256-8953-2f9f73f42531",
    "metadata": {
     "tags": []
@@ -351,8 +359,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "714870c8-d743-40b6-be65-dec5427b3d05",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "folder = \"training/small training set\"\n",
+    "base = \"noisy_small\"\n",
+    "target = \"pure_small\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bd7ffec0-3658-4e7d-b7de-00c6023ea6a1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files loaded.\n",
+      "Files loaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "noisy_stft = StftDataset()\n",
+    "pure_stft = StftDataset()\n",
+    "\n",
+    "noisy_stft.load(folder, base)\n",
+    "pure_stft.load(folder, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e302288-e06d-42c0-925d-c45e21bdcd0a",
    "metadata": {},
    "outputs": [],
    "source": []
